--- a/src/assets/styles/components/_promo-section.scss
+++ b/src/assets/styles/components/_promo-section.scss
@@ -1,6 +1,7 @@
 .promo {
     color: #F4F6F5;
-    min-height: 574px; 
+    // min-height: 574px; 
+    min-height: 747px; 
     overflow: hidden;
     &__bg {
         position: absolute;
