--- a/src/assets/styles/components/_promo-section.scss
+++ b/src/assets/styles/components/_promo-section.scss
@@ -1,7 +1,7 @@
 .promo {
     color: #F4F6F5;
-    // min-height: 574px; 
-    min-height: 747px; 
+    height: calc(100vh - 100px - 189px);
+    width: 100%;
     overflow: hidden;
     &__bg {
         position: absolute;
@@ -10,9 +10,10 @@
         width: 100%;
         height: 100%;
         background-image: url('@/assets/images/promo/promo-background.png');
-        background-size: cover;
+        // background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        background-size: 100% 100%;
         z-index: 0;
         &::after {
             content: '';
@@ -78,6 +79,12 @@
     .promo {
       min-width: 1320px;
     }
+}
+
+@media (max-width: 992px) {
+    .promo {
+        height: 100%; 
+      }
 }
 
 @media (max-width: 960px) {
@@ -170,10 +177,10 @@
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 480px) {
     .promo {
         &__bg {
-            max-height: 553px;
+            max-height: 552px;
             background-image: url('@/assets/images/promo/promo-background-320px.jpg');
             z-index: 0;
         } 
@@ -192,3 +199,25 @@
         }
     }
 }
+// @media (max-width: 320px) {
+//     .promo {
+//         &__bg {
+//             max-height: 553px;
+//             background-image: url('@/assets/images/promo/promo-background-320px.jpg');
+//             z-index: 0;
+//         } 
+        
+//         &__wrapper {
+//             padding: 50px 15px 35px 15px;
+//         }
+
+//         &__button {
+//             font-size: 18px;           
+//             margin-bottom: 20px; 
+//         }
+
+//         &__description {
+//             line-height: 1.4;
+//         }
+//     }
+// }
